# hypr

./: .gitignore  Cargo.toml  README.md  clippy.toml  sign.sh
.github/workflows/: ci.yml  kernel.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  roadmap.md  style_and_conventions.md  suggested_commands.md  task_completion_protocol.md
docs/: architecture.md  building-images.md  cli-reference.md  compose.md  configuration.md  desktop-app-plan.md  documentation.json  getting-started.md  gpu.md  index.md  networking.md  troubleshooting.md  volumes.md
guest/: build-builder-agent.sh  build-kestrel.sh  builder-agent.c  jsmn.h  kestrel  kestrel.c  kestrel_old.c  kestrel_v2.c  kestrel_working.c
hypr-api/: Cargo.toml  build.rs
hypr-api/proto/: hypr.proto
hypr-api/src/: lib.rs
hypr-cli/: Cargo.toml
hypr-cli/src/: main.rs
hypr-cli/src/client/: mod.rs
hypr-cli/src/commands/: build.rs  compose.rs  compose_test.rs  exec.rs  gpu.rs  image.rs  images.rs  logs.rs  mod.rs  network.rs  ps.rs  pull.rs  run.rs  system.rs  volume.rs
hypr-core/: Cargo.toml  build.rs
hypr-core/ebpf/: Makefile  drift_l4_egress.c  drift_l4_ingress.c
hypr-core/examples/: compose_parser_demo.rs
hypr-core/src/: config.rs  embedded.rs  error.rs  lib.rs  paths.rs  ports.rs  proto_convert.rs
hypr-core/src/adapters/: cloudhypervisor.rs  factory.rs  hvf.rs  krun.rs  libkrun_ffi.rs  mod.rs  virtualization.rs
hypr-core/src/adapters/vfio/: detect.rs  detect_macos.rs  device.rs  iommu.rs  manager.rs  mod.rs
hypr-core/src/builder/: build.rs  cache.rs  cas.rs  embedded.rs  executor.rs  executor.rs.backup  graph.rs  http_proxy.rs  initramfs.rs  manifest.rs  mod.rs  oci.rs  output_stream.rs  parser.rs  vm_builder.rs
hypr-core/src/compose/: converter.rs  mod.rs  parser.rs  parser_tests.rs  types.rs
hypr-core/src/compose/tests/fixtures/: basic.yml  multi-service.yml  resources.yml
hypr-core/src/events/: mod.rs
hypr-core/src/exec/: mod.rs  protocol.rs
hypr-core/src/import/: mod.rs
hypr-core/src/manifest/: mod.rs  runtime_manifest.rs
hypr-core/src/metrics/: collector.rs  history.rs  mod.rs
hypr-core/src/network/: defaults.rs  dns.rs  ebpf.rs  ebpf_forwarder.rs  gvproxy.rs  hybrid_forwarder.rs  ipam.rs  mod.rs  port.rs  proxy_forwarder.rs  registry.rs  tap_allocator.rs
hypr-core/src/network/bridge/: linux.rs  macos.rs  mod.rs
hypr-core/src/network/tap/: linux.rs  macos.rs  mod.rs
hypr-core/src/observability/: health.rs  metrics.rs  mod.rs
hypr-core/src/process/: mod.rs
hypr-core/src/registry/: mod.rs
hypr-core/src/scheduler/: mod.rs
hypr-core/src/security/: mod.rs  scanner.rs  trivy.rs
hypr-core/src/snapshots/: mod.rs
hypr-core/src/state/: migrations.rs  mod.rs  tests.rs
hypr-core/src/templates/: builtin.rs  mod.rs
hypr-core/src/types/: image.rs  mod.rs  network.rs  stack.rs  vm.rs  volume.rs
hypr-core/tests/: observability_integration.rs  vm_lifecycle.rs
hypr-daemon/: Cargo.toml
hypr-daemon/src/: main.rs  network_manager.rs  proto_convert.rs  reconcile.rs  shutdown.rs
hypr-daemon/src/api/: mod.rs  server.rs
hypr-daemon/src/orchestrator/: mod.rs  stack.rs
hypr-daemon/tests/: api_integration.rs
scripts/: install-macos.sh  install.sh  uninstall-macos.sh
