[workspace]
resolver = "2"
members = [
    "hypr-cli",
    "hypr-daemon",
    "hypr-core",
    "hypr-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSL-1.1"
repository = "https://github.com/hypr-net/hypr"

[workspace.dependencies]
# Core dependencies (to be shared across crates)
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
