[workspace]
resolver = "2"
members = [
    "hypr-cli",
    "hypr-daemon",
    "hypr-core",
    "hypr-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSL-1.1"
repository = "https://github.com/hypr-net/hypr"

[workspace.dependencies]
# Core dependencies (to be shared across crates)
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.23"
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde_json = "1.0"
