[package]
name = "hypr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hypr"
path = "src/main.rs"

[dependencies]
hypr-core = { path = "../hypr-core" }
hypr-api = { path = "../hypr-api" }
tokio = { workspace = true, features = ["full"] }
tonic = "0.11"
tower = "0.4"
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tabled = "0.15"
uuid = { version = "1.10", features = ["v4"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1.17"
