[package]
name = "hypr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Cryptography
sha2 = "0.10"

# Database
sqlx = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# gRPC API
hypr-api = { path = "../hypr-api" }

# DNS Server
hickory-server = "0.24"
hickory-proto = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
# eBPF support (Linux only)
libbpf-rs = "0.24"
libbpf-sys = "1.4"
nix = { version = "0.29", features = ["net"] }

[dev-dependencies]
mockall = "0.13"

[features]
# libkrun-efi support (macOS Metal GPU, Phase 4)
krun = []
# eBPF networking support (Linux only)
ebpf = []
