[package]
name = "hypr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
dirs = "5.0"
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Cryptography
sha2 = "0.10"
base64 = "0.22"

# Date/time
chrono = "0.4"

# Build system
tar = "0.4"
flate2 = "1.0"

# OCI registry client for pulling base images
oci-distribution = "0.11"

# Compression
zstd = "0.13"

# HTTP client (for builder HTTP proxy and kernel downloads)
# Use rustls instead of openssl for easier cross-compilation
reqwest = { version = "0.11", features = ["stream", "blocking", "rustls-tls"], default-features = false }

# Database
sqlx = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# gRPC API
hypr-api = { path = "../hypr-api" }

# DNS Server
hickory-server = "0.24"
hickory-proto = "0.24"
glob = "0.3.3"
libc = "0.2.178"

[target.'cfg(target_os = "linux")'.dependencies]
# eBPF support (Linux only)
libbpf-rs = "0.24"
libbpf-sys = "1.4"
# Mount syscalls for overlayfs
nix = { version = "0.29", features = ["net", "mount"] }

[dev-dependencies]
mockall = "0.13"

[features]
# libkrun-efi support (macOS Metal GPU, Phase 4)
krun = []
# eBPF networking support (Linux only)
ebpf = []
