[package]
name = "hypr-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hyprd"
path = "src/main.rs"

[dependencies]
hypr-core = { path = "../hypr-core" }
hypr-api = { path = "../hypr-api" }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tracing = { workspace = true }
anyhow = { workspace = true }
tower = "0.4"
dirs = "6.0.0"
base64 = "0.22.1"
libc = "0.2"
uuid = { version = "1.6", features = ["v4"] }

[features]
# libkrun-efi support (macOS Metal GPU, Phase 4)
krun = ["hypr-core/krun"]
